fix(paginator): number of rows are truncated

--- a/projects/kaltura-ng/mc-theme/themes/default/scss/primeng/theme.scss
+++ b/projects/kaltura-ng/mc-theme/themes/default/scss/primeng/theme.scss
@@ -536,7 +536,7 @@ body .p-tieredmenu {
       border: none;
       color: $kGrayscale1;
       font-size: 14px;
-      width: 32px;
+      width: 54px;
       box-shadow: none !important;
       height: 28px;
       line-height: 24px;
